--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/swagger-ui-react": "^4.11.0",
     "apollo-server": "^3.10.3",
     "apollo-server-micro": "^3.10.3",
+    "astar-typescript": "^1.2.5",
     "axios": "^1.1.3",
     "class-validator": "^0.13.2",
     "cors": "^2.8.5",
